# workshop-scientific-computing

./: .gitignore  README.md  pyproject.toml
